# memento-mori

./: .devenv.flake.nix  .gitleaksignore  .pre-commit-config.yaml  README.md  memento-mori  pyproject.toml
.claude/: CLAUDE.md
.devenv.2D8Qyq/: input-paths.txt  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
.devenv.7dO9yg/: input-paths.txt  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
.devenv.9oNXiS/: input-paths.txt  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
.devenv.BRXDZu/: input-paths.txt  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
.devenv.DMRKpe/: input-paths.txt  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
.devenv.GNt2wN/: input-paths.txt  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
.devenv.Lrmq4s/: nix-eval-cache.db-shm  nix-eval-cache.db-wal
.devenv.OXq1oW/: input-paths.txt  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
.devenv.Rrecuu/: input-paths.txt  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
.devenv.YUWJyu/: input-paths.txt  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
.devenv.iXLcUS/: input-paths.txt  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
.devenv.pELYCs/: input-paths.txt  nix-eval-cache.db-shm  profile  run  (+3 more)
(+21 files in other folders)
